# calc

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  artifacts.json  changelog.rss  flake.nix  index.html  mini-calc-installer.sh.txt  mini-calc.spec  oranda.json
.copr/: Makefile
.github/workflows/: manual_build.yml  rust-test.yml  web.yml
.rpm/: mini-calc.spec
artifacts/: index.html
book/: 404.html  configuration.html  function.html  install.html  logic.html  plot.html  print.html  searchindex.js  searchindex.json  usage.html
book/algebra/: index.html  matrices.html  vectors.html
book/exact/: diff.html  float_mode.html  index.html  rational.html  symbolic.html
book/plot/: gui.html  term.html
changelog/: index.html
changelog/2.10.0/: index.html
changelog/2.11.0/: index.html
changelog/2.11.1/: index.html
changelog/2.11.2/: index.html
changelog/2.11.3/: index.html
changelog/2.11.4/: index.html
changelog/2.11.5/: index.html
changelog/2.11.6/: index.html
changelog/2.12.2/: index.html
changelog/2.12.3/: index.html
changelog/2.12.4/: index.html
changelog/2.13.0/: index.html
changelog/2.13.1/: index.html
changelog/2.13.2/: index.html
changelog/2.9.10/: index.html
changelog/2.9.3/: index.html
changelog/2.9.4/: index.html
changelog/2.9.6/: index.html
changelog/2.9.8/: index.html
changelog/2.9.9/: index.html
changelog/3.0.0/: index.html
changelog/3.0.1/: index.html
changelog/3.1.0/: index.html
changelog/3.2.0/: index.html
changelog/3.3.2/: index.html
manual/: main.typ
src/: main.rs
(+45 files in other folders)
